base/drupal/base/drupal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${app_name}-drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${app_name}-drupal
      app.kubernetes.io/name: ${app_name}-drupal
      app.kubernetes.io/instance: ${app_name}-drupal
  template:
    metadata:
      labels:
        app: ${app_name}-drupal
        app.kubernetes.io/name: ${app_name}-drupal
        app.kubernetes.io/instance: ${app_name}-drupal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 100
        fsGroup: 100
      containers:
      - name: ${app_name}-drupal
        image: PATCH_ME
        ports:
        - name: fastcgi
          containerPort: 9000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      - name: ${app_name}-php-fpm-exporter
        image: 'git.app.uib.no:4567/robin.grundvag1/php-fpm-exporter/hipages/php-fpm_exporter:uib-v0.1.0'
        ports:
          - name: metrics
            containerPort: 9253
            protocol: TCP
        resources:
          requests:
            memory: '64M'
            cpu: '100m'
          limits:
            memory: '64M'
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
