base/drupal/base/drupal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app_name}-drupal
  labels:
    app: ${app_name}-drupal
spec:
  selector:
    app: ${app_name}-drupal
  ports:
  - name: fastcgi
    port: 9000
    targetPort: 9000
  - name: metrics
    port: 9253
    targetPort: 9253
